fix triangle z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -214,6 +214,7 @@
 }
 
 .feynman__subtitle {
+  margin: 0;
   font-size: 36px;
   line-height: 51px;
   text-align: center;
@@ -231,7 +232,6 @@
   padding: 90px 0;
   background-color: var(--grey-bg-dark);
   overflow: hidden;
-  z-index: -2;
 }
 
 .section-title_place_kaufman,
@@ -245,6 +245,7 @@
   color: var(--basic-white);
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -253,5 +254,4 @@
   right: -210px;
   width: 877px;
   height: 877px;
-  z-index: -1;
 }
